# classics

./: .env.example  .gitignore  Justfile  LICENSE  README.md  buffer.py  db.py  do.md  library.txt  main.py  publish.py  pyproject.toml  render.py  test_buffer.py  test_main.py  test_publish.py  test_render.py  test_web.py  test_weekly.py  web.py  weekly.py
docs/: social-pipeline.md
static/: index.html  stats.html
