[project]
name = "classics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "mdweaver>=0.3.0",
    "numpy>=2.5.0",
    "pyperclip>=1.11.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ty>=0.0.53",
]
